tests/ui/traits/next-solver/cycles/fixpoint-rerun-all-cycle-heads.stderr
error: lifetime may not live long enough
  --> $DIR/fixpoint-rerun-all-cycle-heads.rs:60:5
   |
LL | fn check<'a, T>() {
   |          -- lifetime `'a` defined here
LL |     impls_trait::<'a, 'static, A<T>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

